--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -121,4 +121,11 @@ a .signup {
     /*margin-left: 100px;*/
 }
 
+.search_submit {
+    position: relative;
+    left: 600px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
 
