refactored client's sign in and editing

--- a/page_samples/css/style.css
+++ b/page_samples/css/style.css
@@ -27,3 +27,16 @@
     width: 300px;
     height: 450px;
 }
+
+.control {
+    color: white;
+}
+
+.control:visited {
+    color: white;
+    text-decoration: none;
+}
+
+.control-row {
+    margin-top: 80px;
+}
