--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -129,3 +129,19 @@ a .signup {
 }
 
 
+.control {
+    color: white;
+}
+
+.control:visited {
+    color: white;
+    text-decoration: none;
+}
+
+.control:hover {
+    color:white;
+}
+
+.control-row {
+    margin-top: 80px;
+}
